<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_maps">
    <fragment
        android:id="@+id/nav_maps"
        android:name="com.example.test1.ui.map.SMF"
        android:label="@string/menu_map"
        tools:layout="@layout/activity_maps" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.test1.ui.profile.profileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile"
        />
    <fragment
        android:id="@+id/nav_findFriend"
        android:name="com.example.test1.ui.findFriend.findFriendFragment"
        android:label="@string/menu_findFriend"
        tools:layout="@layout/fragment_find_friend"
        />
</navigation>
